完善实验一

--- a/sample/Makefile
+++ b/sample/Makefile
@@ -1,2 +1,11 @@
-mail:
-	mail.cpp
+CC          = g++
+CFLAGS      = -std=c++17
+TARGET		= sample
+
+all: main.cpp
+	@$(CC) -o $(TARGET) $(CFLAGS) $^
+	@$(TARGET) test/test2.in
+
+clean:
+	del /f /q *.o $(TARGET)
+
