--- a/sample/Makefile
+++ b/sample/Makefile
@@ -3,10 +3,12 @@ CFLAGS      = -std=c++17
 
 main1: main1.cpp Data.cpp Parser.cpp Lexer.cpp Storage.cpp
 	@$(CC) -o main1 $(CFLAGS) $^
+	@chcp 65001
 	@main1
 
 main2: main2.cpp Data.cpp Parser.cpp Lexer.cpp Storage.cpp
 	@$(CC) -o main2 $(CFLAGS) $^
+	@chcp 65001
 	@main2
 
 clean:
