remove Parser.cpp

--- a/sample/Makefile
+++ b/sample/Makefile
@@ -1,12 +1,12 @@
 CC          = g++
 CFLAGS      = -std=c++17
 
-main2: main2.cpp Parser.cpp
+main2: main2.cpp
 	@$(CC) -o main2 $(CFLAGS) $^
 	@chcp 65001
 	@main2
 
-main1: main1.cpp Parser.cpp
+main1: main1.cpp
 	@$(CC) -o main1 $(CFLAGS) $^
 	@chcp 65001
 	@main1
