--- a/sample/Makefile
+++ b/sample/Makefile
@@ -1,16 +1,12 @@
 CC          = g++
 CFLAGS      = -std=c++17
 
-main2: main2.cpp
-	@$(CC) -o main2 $(CFLAGS) $^
-	@chcp 65001
-	@main2
+main2: main2.cpp Parser.h
+	$(CC) -o main2 $(CFLAGS) main2.cpp
 
 main1: main1.cpp
-	@$(CC) -o main1 $(CFLAGS) $^
-	@chcp 65001
-	@main1
+	$(CC) -o main1 $(CFLAGS) main1.cpp
 
 clean:
-	del /f /q *.o main1.exe main2.exe
+	-rm -f *.o main1.exe main2.exe
 
