--- a/sample/Makefile
+++ b/sample/Makefile
@@ -1,10 +1,11 @@
 CC          = g++
 CFLAGS      = -std=c++17
 
-main2: main2.cpp Parser.h
+main2: main2.cpp Parser.h Lexer.h
 	$(CC) -o main2 $(CFLAGS) main2.cpp
+	./main2 test/test4.in
 
-main1: main1.cpp
+main1: main1.cpp Lexer.h
 	$(CC) -o main1 $(CFLAGS) main1.cpp
 
 clean:
